# aioesphomeapi

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  MAINTAINERS.md  MANIFEST.in  README.rst  gen-protoc.sh  main.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.claude/skills/pr-workflow/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  close-pr-from-fork-default-branch.yml  docker.yml  labeler.yml  lock.yml  protoc-lint.yml  protoc-update.yml  release-drafter.yml  release.yml
.github/workflows/matchers/: isort.json  pytest.json
aioesphomeapi/: __init__.py  _frame_helper.py  _sanitize.pxd  _sanitize.py  api.proto  api_options.proto  api_options_pb2.py  api_pb2.py  ble_defs.py  client.py  client_base.pxd  client_base.py  client_callbacks.c  client_callbacks.html  client_callbacks.pxd  client_callbacks.py  compat.py  connection.pxd  connection.py  core.py  discover.py  host_resolver.py  log_parser.py  log_reader.py  log_runner.py  model.py  model_conversions.py  object_id.py  posix_tz.py  reconnect_logic.py  singleton.py  state_log_formatter.py  time_zone.py  timezone.py  util.py  zeroconf.py
aioesphomeapi/_frame_helper/: __init__.py  _packets.pxd  _packets.pyx  base.pxd  base.py  noise.pxd  noise.py  noise_encryption.pxd  noise_encryption.py  noise_helpers.py  pack.html  pack.pxd  pack.pyx  packet_helpers.py  packets.html  packets.pxd  packets.py  plain_text.pxd  plain_text.py
bench/: raw_ble_plain_text.py  raw_ble_plain_text_with_callback.py
requirements/: base.txt  test.txt
script/: gen-protoc  lint
tests/: __init__.py  common.py  conftest.py  test__frame_helper.py  test__frame_helper_message_parsing.py  test__sanitize.py  test_bluetooth_benchmarks.py  test_client.py  test_connection.py  test_core.py  test_discover.py  test_host_resolver.py  test_lazy_imports.py  test_log_parser.py  test_log_reader.py  test_log_runner.py  test_model.py  test_model_conversions.py  test_object_id.py  test_posix_tz.py  test_provide_time.py  test_public_api.py  test_reconnect_logic.py  test_singleton.py  test_state_log_formatter.py  test_time_zone.py  test_timezone.py  test_util.py  test_zeroconf.py
tests/benchmarks/: __init__.py  conftest.py  helpers.py  test_bluetooth.py  test_callback_dispatch.py  test_list_entities.py  test_noise.py  test_requests.py  test_state_messages.py
