[tool.ruff]
required-version = ">=0.5.0"
target-version = "py311"
exclude = [
  "aioesphomeapi/api_pb2.py",
  "aioesphomeapi/api_options_pb2.py",
]

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "ASYNC", # async rules
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "C90", # mccabe complexity
  "DTZ", # flake8-datetimez
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "ERA", # eradicate (commented-out code)
  "EXE", # flake8-executable
  "F", # pyflakes/autoflake
  "FA", # flake8-future-annotations
  "FIX", # flake8-fixme
  "FLY", # flynt
  "FURB", # refurb
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420 (implicit namespace packages)
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # numpy-specific rules
  "PERF", # Perflint
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL", # pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "UP", # pyupgrade
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff
  "S", # flake8-bandit
  "SIM", # flake8-SIM
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TC", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # Tidy imports
  "TRY", # try rules
  "PERF", # performance
  "W", # pycodestyle warnings
  "YTT", # flake8-2020
]

ignore = [
  "ASYNC109", # `timeout` parameters are part of the public async API
  "E501", # line too long
  "E721", # We want type() check for protobuf messages
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "TRY003", # Too many to fix - Avoid specifying long messages outside the exception class
  "TID252", # Prefer absolute imports over relative imports from parent modules
]

[tool.ruff.lint.per-file-ignores]
# pytest fixtures are routinely "unused" — they're requested for their
# setup side effects, not their return value. The ARG family flags this
# as noise; the rest of the family still applies to production code.
# SLF: tests and benchmarks legitimately reach into private state to
# pin invariants and to swap out hot-path methods for measurement.
# S101: pytest assertions are the entire point of the test suite.
# S106: test fixtures use literal "password" strings to exercise the
# password-auth code paths; they are not real credentials.
"tests/**" = ["ARG", "S101", "S106", "SLF"]
# CLI entry points and benchmark scripts emit to stdout by design; T20
# would flag every line of their intended output. SLF: benchmark harness
# constructs APIConnection from APIClient internals to measure hot paths.
# S101: benchmark sanity asserts are intentional.
"aioesphomeapi/discover.py" = ["T20"]
"aioesphomeapi/log_reader.py" = ["T20"]
"bench/**" = ["S101", "SLF", "T20"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "aioesphomeapi", "tests"
]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ['setuptools>=82.0.1', 'wheel', 'Cython>=3.2.4']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.cibuildwheel.linux]
# Re-enable 32-bit builds (disabled by default in cibuildwheel 3.0)
archs = ["auto", "auto32"]
